<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RespondeyAprende</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_empezar">Empezar</string>
    <string name="empezar">Empezar</string>
    <string name="listaPreguntas">Lista de Preguntas</string>
    <string name="cargarPreguntas">Escribir Preguntas</string>
    <string name="palabraVacia"></string>
    <string name="salir">Salir</string>
    <string name="title_activity_guardar_preguntas">GuardarPreguntas</string>
    <string name="categoria">Categoria</string>
    <string name="pregunta">Pregunta</string>
    <string name="respuesta_correcta">Respuesta Correcta</string>
    <string name="respuesta_aleatoria">Respuesta Aleatoria</string>
    <string name="borrarr">Borrar</string>
    <string name="guardar">Guardar</string>
</resources>
