<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Principal" >

    <Button
        android:id="@+id/empezar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40pt"
        android:text="@string/empezar" />

    <Button
        android:layout_marginTop="5pt"
        android:id="@+id/btCargaListaPregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listaPreguntas" />

    <Button
        android:layout_marginTop="5pt"
        android:id="@+id/btCargaPregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cargarPreguntas" />

    <Button
        android:layout_marginTop="5pt"
        android:id="@+id/btSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salir" />

</LinearLayout>
